All commands and filesystem objects implemented and all tests created